Ajustes e novo endoint
